Upgrade 0.21.1 and merge upstream (#158)
Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: Caleb Hattingh <caleb.hattingh@gmail.com>
Co-authored-by: Adam Reichold <adamreichold@users.noreply.github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Justin Greene <justin.greene@intouchsol.com>
Co-authored-by: Paul Masurel <paul@quickwit.io>
Co-authored-by: Pratyush Mittal <pratyushmittal@gmail.com>
Co-authored-by: mukeshsahnis <er.mks89@gmail.com>
Co-authored-by: Stone <47559019+st1020@users.noreply.github.com>
Co-authored-by: Chris Tam <ohgodtamit@gmail.com>

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -41,6 +41,7 @@ jobs:
             github.com:443
             pypi.org:443
             uploads.github.com:443
+            static.rust-lang.org:443
 
       - name: Checkout repository
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
@@ -73,6 +74,6 @@ jobs:
       #   ./location_of_script_within_repo/buildscript.sh
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@c0d1daa7f7e14667747d73a7dbbe8c074bc8bfe2 # v2.2.5
+        uses: github/codeql-action/analyze@66b90a5db151a8042fa97405c6cf843bbe433f7b # v2.2.5
         with:
           category: "/language:${{matrix.language}}"
