--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,20 +22,23 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             api.github.com:443
+            cdn.quay.io:443
+            cdn01.quay.io:443
+            cdn02.quay.io:443
             cdn03.quay.io:443
             crates.io:443
+            files.pythonhosted.org:443
+            ghcr.io:443
             github.com:443
+            index.crates.io:443
             objects.githubusercontent.com:443
+            uploads.github.com:443
+            pkg-containers.githubusercontent.com:443
+            pypi.org:443
             quay.io:443
             sh.rustup.rs:443
             static.crates.io:443
-            index.crates.io:443
             static.rust-lang.org:443
-            uploads.github.com:443
-            pypi.org:443
-            files.pythonhosted.org:443
-            ghcr.io:443
-            pkg-containers.githubusercontent.com:443
 
       - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089
       - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c
@@ -43,13 +46,12 @@ jobs:
           python-version: 3.8
           architecture: x64
 
-      - uses: messense/maturin-action@a3013db91b2ef2e51420cfe99ee619c8e72a17e6
+      - uses: PyO3/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
         with:
-          rust-toolchain: stable
           manylinux: auto
           target: ${{ matrix.platform }}
           command: build
-          args: --release --sdist -o dist -i 3.8 3.9 3.10 3.11
+          args: --release --sdist -o dist -i 3.8 3.9 3.10 3.11 3.12
 
       - name: Upload wheels
         uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32  # 3.1.3
@@ -62,7 +64,7 @@ jobs:
     strategy:
       matrix:
         target: [x64]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@eb238b55efaa70779f274895e782ed17c84f2895
@@ -74,7 +76,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - uses: messense/maturin-action@a3013db91b2ef2e51420cfe99ee619c8e72a17e6
+      - uses: PyO3/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
         env:
           PYO3_PYTHON: python${{ matrix.python-version }}
         with:
@@ -91,7 +93,8 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        target: ['universal2', 'x86_64-apple-darwin']
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@eb238b55efaa70779f274895e782ed17c84f2895
@@ -103,12 +106,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Build wheels - x86_64
-        uses: messense/maturin-action@a3013db91b2ef2e51420cfe99ee619c8e72a17e6
+      - name: Build wheels - ${{ matrix.target }}
+        uses: PyO3/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
         env:
           PYO3_PYTHON: python${{ matrix.python-version }}
         with:
-          target: x86_64-apple-darwin
+          target: ${{ matrix.target }}
           command: build
           args: --release -o dist
 
@@ -140,17 +143,16 @@ jobs:
           allowed-endpoints: >
             api.github.com:443
             github.com:443
-            static.rust-lang.org:443
             uploads.github.com:443
+            static.rust-lang.org:443 
 
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
         with:
           ref: ${{ github.head_ref }}
 
-      - uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af # v1.0.7
+      - uses: dtolnay/rust-toolchain@439cf607258077187679211f12aa6f19af4a0af7
         with:
-          profile: minimal
-          toolchain: stable
+          toolchain: 1.73.0
 
       - name: Set up Python 3.8
         uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
