--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["maturin>=0.13,<0.14"]
+requires = ["maturin<=1.3.2"]
 build-backend = "maturin"
 
 [project]
 name = "tantivy"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 
 [project.optional-dependencies]
 dev = [
@@ -13,3 +13,15 @@ dev = [
 
 [tool.maturin]
 bindings = "pyo3"
+
+[tool.pytest.ini_options]
+# Set the durations option and doctest modules
+# See https://docs.pytest.org/en/latest/usage.html#durations
+addopts = "--doctest-modules --durations=10"
+# Use the `--ignore-glob` setting to exclude the `noxfile.py` module from the doctests
+# See https://docs.pytest.org/en/latest/reference.html#confval-ignore_glob
+testpaths = [
+    "tests",
+    "tantivy",
+    "src",
+]
