--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,15 @@ futures = "0.3.26"
 pythonize = "0.20.0"
 serde = "1.0"
 serde_json = "1.0.91"
+# Lindera
+lindera-core = { version = "0.27.2", optional = true }
+lindera-dictionary = { version = "0.27.2", optional = true }
+lindera-tantivy = { version = "0.27.1", optional = true, features = ["ipadic"] }
 
 [dependencies.pyo3]
 version = "0.20.0"
 features = ["chrono", "extension-module"]
+
+[features]
+lindera = ["lindera-core", "lindera-dictionary", "lindera-tantivy"]
+
