--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dev = [
 bindings = "pyo3"
 
 [tool.pytest.ini_options]
+markers = [
+    "lindera: mark a test as requiring lindera",
+]
 # Set the durations option and doctest modules
 # See https://docs.pytest.org/en/latest/usage.html#durations
 addopts = "--doctest-modules --durations=10"
