--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        lindera: ["", "_lindera"]
         python-version: [3.9]
         include:
           - os: ubuntu-latest
@@ -79,4 +80,4 @@ jobs:
 
       - uses: Swatinem/rust-cache@23bce251a8cd2ffc3c1075eaa2367cf899916d84  # 2.7.3
       - run: python3 -m pip install nox
-      - run: nox -s test-${{ matrix.python-version }}
+      - run: nox -s test${{matrix.lindera}}-${{ matrix.python-version }}
