--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,14 +41,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         lindera: ["", "_lindera"]
-        python-version: [3.10]
+        python-version: ["3.10"]
         include:
           - os: ubuntu-latest
             python-version: "3.12"
           - os: ubuntu-latest
             python-version: "3.11"
-          - os: ubuntu-latest
-            python-version: "3.10"
     runs-on: "${{ matrix.os }}"
     steps:
       - name: Harden Runner
