--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -56,44 +56,14 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3  # 4.3.1
         with:
-          name: wheels
-          path: dist
-
-  windows:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        target: [x64]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142
-        with:
-          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
-
-      - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089
-      - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - uses: PyO3/maturin-action@60d11847b29f81ca5375519a8eb33cc336ba4bfa
-        env:
-          PYO3_PYTHON: python${{ matrix.python-version }}
-        with:
-          command: build
-          args: --release -o dist
-
-      - name: Upload wheels
-        uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3  # 4.3.1
-        with:
-          name: wheels
+          name: wheels-${{ matrix.platform }}
           path: dist
 
   macos:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.10']
         target: ['universal2', 'x86_64-apple-darwin']
     steps:
       - name: Harden Runner
@@ -118,12 +88,12 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3  # 4.3.1
         with:
-          name: wheels
+          name: wheels-${{ matrix.platform }}
           path: dist
 
   python-release-github:
     runs-on: ubuntu-latest
-    needs: [ macos, windows, linux ]
+    needs: [ macos, linux ]
     permissions:
       contents: write # To add assets to a release.
     steps:
@@ -162,34 +132,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           asset_paths: '["./wheels/tantivy-*"]'
-
-  release-pypy:
-    name: Release
-    runs-on: ubuntu-latest
-    needs: [ macos, windows, linux ]
-    permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142
-        with:
-          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
-
-      - uses: actions/download-artifact@c850b930e6ba138125429b7e5c93fc707a7f8427 # v4.1.4
-        with:
-          name: wheels
-          path: wheels
-
-      - name: Publish package distributions to Test PyPI
-        uses: pypa/gh-action-pypi-publish@81e9d935c883d0b210363ab89cf05f3894778450 # v1.8.14
-        with:
-          repository-url: https://test.pypi.org/legacy/
-          packages-dir: wheels/
-          skip-existing: true
-
-      - name: Publish package distributions to PyPI
-        if: always()
-        uses: pypa/gh-action-pypi-publish@81e9d935c883d0b210363ab89cf05f3894778450 # v1.8.14
-        with:
-          packages-dir: wheels/
-          skip-existing: true
