--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -88,7 +88,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3  # 4.3.1
         with:
-          name: wheels-${{ matrix.platform }}
+          name: wheels-${{ matrix.target }}
           path: dist
 
   python-release-github:
