chore: update python versions in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.9]
+        python-version: ["3.12"]
         include:
           - os: ubuntu-latest
-            python-version: "3.12"
+            python-version: "3.13-dev"
           - os: ubuntu-latest
             python-version: "3.11"
           - os: ubuntu-latest
