Prerelease syntax for 3.13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,8 @@ jobs:
         python-version: ["3.12"]
         include:
           - os: ubuntu-latest
-            python-version: "3.13-dev"
+            python-version: "3.13"
+            allow-prereleases: true
           - os: ubuntu-latest
             python-version: "3.11"
           - os: ubuntu-latest
