--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.12"]
-        allow-prereleases: false
+        allow-prereleases: [false]
         include:
           - os: ubuntu-latest
             python-version: "3.13"
