--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,10 +4,10 @@ on:
   release:
     types: [published]
 
-# on:
-#   pull_request:
-#     branches:
-#       - master
+on:
+  pull_request:
+    branches:
+      - master
 
 permissions:
   contents: read
@@ -60,11 +60,6 @@ jobs:
           command: build
           args: --release --sdist -o dist -i 3.8 3.9 3.10 3.11 3.12
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@897ed5eab6ed058a474202017ada7f40bfa52940 # v1.0.0
-        with:
-          subject-path: 'dist/*'
-
       - name: Upload wheels
         uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808  # 4.3.3
         with:
@@ -99,15 +94,10 @@ jobs:
           command: build
           args: --release -o dist
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@897ed5eab6ed058a474202017ada7f40bfa52940 # v1.0.0
-        with:
-          subject-path: 'dist/*'
-
       - name: Upload wheels
         uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808  # 4.3.3
         with:
-          name: wheels
+          name: wheels-${{ matrix.python-version }}
           path: dist
 
   macos:
@@ -140,15 +130,10 @@ jobs:
           command: build
           args: --release -o dist
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@897ed5eab6ed058a474202017ada7f40bfa52940 # v1.0.0
-        with:
-          subject-path: 'dist/*'
-
       - name: Upload wheels
         uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808  # 4.3.3
         with:
-          name: wheels-${{ matrix.platform }}
+          name: wheels-${{ matrix.python-version }}-${{ matrix.platform }}
           path: dist
 
   python-release-github:
