--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -98,6 +98,7 @@ jobs:
         with:
           name: wheels-${{ matrix.python-version }}-${{ matrix.platform }}
           path: dist/*.whl
+          overwrite: true
 
   macos:
     runs-on: macos-latest
