--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -98,7 +98,6 @@ jobs:
         with:
           name: wheels-${{ matrix.python-version }}-${{ matrix.target }}
           path: dist/*.whl
-          overwrite: true
 
   macos:
     runs-on: macos-latest
@@ -133,9 +132,8 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808  # 4.3.3
         with:
-          name: wheels-${{ matrix.python-version }}-${{ matrix.platform }}
+          name: wheels-${{ matrix.python-version }}-${{ matrix.target }}
           path: dist/*.whl
-          overwrite: true
 
   python-release-github:
     runs-on: ubuntu-latest
