--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
         run: cargo fmt --check
 
   Test:
+    continue-on-error: ${{ matrix.python-version == '3.13' }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -51,8 +52,7 @@ jobs:
           - os: ubuntu-latest
             python-version: "3.13"
             allow-prereleases: true
-            # Allow errors for prerelease versions
-            continue-on-error: true
+            env: PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1
           - os: ubuntu-latest
             python-version: "3.11"
             allow-prereleases: false
