--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,8 @@ jobs:
           - os: ubuntu-latest
             python-version: "3.13"
             allow-prereleases: true
-            env: PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1
+            env:
+              UNSAFE_PYO3_SKIP_VERSION_CHECK=1
           - os: ubuntu-latest
             python-version: "3.11"
             allow-prereleases: false
