deps: upgrade PyO3 to 0.21 (#275)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,15 +42,20 @@ jobs:
         run: cargo fmt --check
 
   Test:
+    continue-on-error: ${{ matrix.python-version == '3.13' }}
+    env:
+      UNSAFE_PYO3_SKIP_VERSION_CHECK: ${{ matrix.unsafe-pyo3-skip-version-check }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.12"]
         allow-prereleases: [false]
+        unsafe-pyo3-skip-version-check: [0]
         include:
           - os: ubuntu-latest
             python-version: "3.13"
             allow-prereleases: true
+            unsafe-pyo3-skip-version-check: 1
           - os: ubuntu-latest
             python-version: "3.11"
             allow-prereleases: false
