--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ futures = "0.3.30"
 pythonize = "0.21.0"
 serde = "1.0"
 serde_json = "1.0.127"
+fnv = "1.0.7"
 
 [dependencies.pyo3]
 version = "0.21.0"
