Try just "python" instead of "python3" as per setup-python docs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,5 +100,5 @@ jobs:
           toolchain: "stable"
 
       - uses: Swatinem/rust-cache@23bce251a8cd2ffc3c1075eaa2367cf899916d84  # 2.7.3
-      - run: python3 -m pip install nox
+      - run: python -m pip install nox
       - run: nox -s test-${{ matrix.python-version }}
