--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,6 @@ jobs:
         run: cargo fmt --check
 
   Test:
-    continue-on-error: ${{ matrix.python-version == '3.13' }}
     env:
       UNSAFE_PYO3_SKIP_VERSION_CHECK: ${{ matrix.unsafe-pyo3-skip-version-check }}
     strategy:
@@ -54,8 +53,10 @@ jobs:
         include:
           - os: ubuntu-latest
             python-version: "3.13"
-            allow-prereleases: true
-            unsafe-pyo3-skip-version-check: 1
+            allow-prereleases: false
+          - os: ubuntu-latest
+            python-version: "3.12"
+            allow-prereleases: false
           - os: ubuntu-latest
             python-version: "3.11"
             allow-prereleases: false
@@ -64,9 +65,6 @@ jobs:
             allow-prereleases: false
           - os: ubuntu-latest
             python-version: 3.9
-            allow-prereleases: false
-          - os: ubuntu-latest
-            python-version: 3.8
             allow-prereleases: false
     runs-on: "${{ matrix.os }}"
     steps:
