--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
           - os: ubuntu-latest
             python-version: "3.13"
             allow-prereleases: false
+            unsafe-pyo3-skip-version-check: 1
           - os: ubuntu-latest
             python-version: "3.12"
             allow-prereleases: false
