--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,14 @@ build-backend = "maturin"
 
 [project]
 name = "tantivy"
+version = "0.22.1"
+description = "Official Python bindings for the Tantivy search engine"
 requires-python = ">=3.9"
-
-[project.optional-dependencies]
-dev = [
-    "nox",
+authors = [
+    { name = "Caleb Hattingh", email = "code@cjrh.info" },
+    { name = "Cam Parry", email = "cam.parry@kapiche.com"}
 ]
+optional-dependencies = { dev = ["nox"] }
 
 [tool.maturin]
 bindings = "pyo3"
