--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ pythonize = "0.21.0"
 serde = "1.0"
 serde_json = "1.0.133"
 fnv = "1.0.7"
+unicode-properties = "0.1.3"
 
 [dependencies.pyo3]
 version = "0.21.0"
